test/langtools/tools/javac/valhalla/lworld-values/NullPollutionTest.out
NullPollutionTest.java:12:21: compiler.warn.potential.null.pollution: java.lang.Object
- compiler.err.warnings.and.werror
1 error
1 warning
